--- a/arches/app/templates/pouch_demo.htm
+++ b/arches/app/templates/pouch_demo.htm
@@ -6,6 +6,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="media/css/arches.css">
+        <title>Couchdb/Pouchdb Demo</title>
     </head>
     <body>
         <div class="pad-all">
@@ -73,13 +74,6 @@
                         <!-- /ko -->
                     </ul>
                 </section>
-                <footer id="footer">
-                    <span id="todo-count"></span>
-                    <div id="sync-wrapper">
-                        <div id="sync-success">Currently syncing</div>
-                        <div id="sync-error">There was a problem syncing</div>
-                    </div>
-                </footer>
             </section>
             
         </div>
@@ -94,32 +88,11 @@
         </script>
         <script>
 
-            var ENTER_KEY = 13;
-            var newTodoDom = document.getElementById('new-todo');
-            var syncDom = document.getElementById('sync-wrapper');
-
-            // EDITING STARTS HERE (you dont need to edit anything above this line)
-
             viewModel = {
                 "tiles": ko.observableArray(),
                 "remote_data_updated": ko.observable(false),
                 "listening": ko.observable(false)
             }
-
-        
-            // We have to create a new todo document and enter it in the database
-            // function addTodo(text) {
-            //     var todo = {
-            //         _id: new Date().toISOString(),
-            //         title: text,
-            //         completed: false
-            //     };
-            //     localDB.put(todo, function callback(err, result) {
-            //         if (!err) {
-            //             console.log('Successfully posted a todo!');
-            //         }
-            //     });
-            // }
 
             function setupDBs(project_id){
                 localDB = new PouchDB('project_'+project_id);
@@ -135,43 +108,12 @@
                 });
             }
 
-
-            // function checkboxChanged(todo, event) {
-            //     todo.completed = event.target.checked;
-            //     localDB.put(todo);
-            // }
-
-            // // User pressed the delete button for a todo, delete it
-            // function deleteButtonPressed(todo) {
-            //     localDB.remove(todo);
-            // }
-
-            // // The input box when editing a todo has blurred, we should save
-            // // the new title or delete the todo if the title is empty
-            // function todoBlurred(todo, event) {
-            //     var trimmedText = event.target.value.trim();
-            //     if (!trimmedText) {
-            //         localDB.remove(todo);
-            //     } else {
-            //         todo.title = trimmedText;
-            //         localDB.put(todo);
-            //     }
-            // }
-
             // Initialise a sync with the remote server
             function sync(project_id) {
                 console.log(project_id)
                 setupDBs(project_id);
 
-                // localDB.changes({
-                //     since: 'now',
-                //     live: true
-                // }).on('change', showTodos);
-
-                //syncDom.setAttribute('data-sync-state', 'syncing');
                 var opts = {live: true};
-                // localDB.replicate.to(remoteDB, opts, syncError);
-                // localDB.replicate.from(remoteDB, opts, syncError);
                 localDB.sync(remoteDB).on('complete', function () {
                     // yay, we're in sync!
                     console.log('yay, we\'re in sync!')
@@ -229,100 +171,6 @@
                 changes.cancel();
                 viewModel.listening(false);
             }
-
-
-            // EDITING STARTS HERE (you dont need to edit anything below this line)
-
-            // There was some form or error syncing
-            // function syncError() {
-            //     syncDom.setAttribute('data-sync-state', 'error');
-            // }
-
-            // // User has double clicked a todo, display an input so they can edit the title
-            // function todoDblClicked(todo) {
-            //     var div = document.getElementById('li_' + todo._id);
-            //     var inputEditTodo = document.getElementById('input_' + todo._id);
-            //     div.className = 'editing';
-            //     inputEditTodo.focus();
-            // }
-
-            // // If they press enter while editing an entry, blur it to trigger save
-            // // (or delete)
-            // function todoKeyPressed(todo, event) {
-            //     if (event.keyCode === ENTER_KEY) {
-            //         var inputEditTodo = document.getElementById('input_' + todo._id);
-            //         inputEditTodo.blur();
-            //     }
-            // }
-
-            // // Given an object representing a todo, this will create a list item
-            // // to display it.
-            // function createTodoListItem(todo) {
-            //     var checkbox = document.createElement('input');
-            //     checkbox.className = 'toggle';
-            //     checkbox.type = 'checkbox';
-            //     checkbox.addEventListener('change', checkboxChanged.bind(this, todo));
-
-            //     var label = document.createElement('label');
-            //     label.appendChild( document.createTextNode(todo.title));
-            //     label.addEventListener('dblclick', todoDblClicked.bind(this, todo));
-
-            //     var deleteLink = document.createElement('button');
-            //     deleteLink.className = 'destroy';
-            //     deleteLink.addEventListener( 'click', deleteButtonPressed.bind(this, todo));
-
-            //     var divDisplay = document.createElement('div');
-            //     divDisplay.className = 'view';
-            //     divDisplay.appendChild(checkbox);
-            //     divDisplay.appendChild(label);
-            //     divDisplay.appendChild(deleteLink);
-
-            //     var inputEditTodo = document.createElement('input');
-            //     inputEditTodo.id = 'input_' + todo._id;
-            //     inputEditTodo.className = 'edit';
-            //     inputEditTodo.value = todo.title;
-            //     inputEditTodo.addEventListener('keypress', todoKeyPressed.bind(this, todo));
-            //     inputEditTodo.addEventListener('blur', todoBlurred.bind(this, todo));
-
-            //     var li = document.createElement('li');
-            //     li.id = 'li_' + todo._id;
-            //     li.appendChild(divDisplay);
-            //     li.appendChild(inputEditTodo);
-
-            //     if (todo.completed) {
-            //         li.className += 'complete';
-            //         checkbox.checked = true;
-            //     }
-
-            //     return li;
-            // }
-
-            // function redrawTodosUI(todos) {
-            //     var ul = document.getElementById('todo-list');
-            //     ul.innerHTML = '';
-            //     todos.forEach(function(todo) {
-            //         ul.appendChild(createTodoListItem(todo.doc));
-            //     });
-            // }
-
-            // function newTodoKeyPressHandler( event ) {
-            //     if (event.keyCode === ENTER_KEY) {
-            //         addTodo(newTodoDom.value);
-            //         newTodoDom.value = '';
-            //     }
-            // }
-
-            // function addEventListeners() {
-            //     newTodoDom.addEventListener('keypress', newTodoKeyPressHandler, false);
-            // }
-
-            // addEventListeners();
-            // showTodos();
-
-            // if (remoteDB) {
-            //   console.log('syncing');
-            //   //sync();
-            // }
 
             ko.applyBindings(viewModel);
 
